policy-sets/cloudpak-deployer/input-wizzard/wizzard.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cloud-pak-deployer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-pak-deployer-wizard
  namespace: cloud-pak-deployer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloud-pak-deployer-wizard
  template:
    metadata:
      name: cloud-pak-deployer-wizard
      labels:
        app: cloud-pak-deployer-wizard
    spec:
      containers:
        - name: cloud-pak-deployer
          image: quay.io/cloud-pak-deployer/cloud-pak-deployer:latest
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /Data/cpd-config
            - name: status-volume
              mountPath: /Data/cpd-status
          command: ['/bin/sh', '-xc']
          args:
            - mkdir -p /Data/cpd-config/config && /cloud-pak-deployer/cp-deploy.sh env wizard -v
      securityContext:
        runAsUser: 0
      serviceAccountName: cloud-pak-deployer-sa
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: cloud-pak-deployer-config
        - name: status-volume
          persistentVolumeClaim:
            claimName: cloud-pak-deployer-status
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-pak-deployer-wizard-svc
  namespace: cloud-pak-deployer
spec:
  selector:
    app: cloud-pak-deployer-wizard
  ports:
    - nodePort: 0
      port: 8080
      protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: cloud-pak-deployer-wizard
  namespace: cloud-pak-deployer
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: cloud-pak-deployer-wizard-svc
    weight: null
